Add $manifest_path substitution for cargo override commands

--- a/docs/user/generated_config.adoc
+++ b/docs/user/generated_config.adoc
@@ -44,8 +44,10 @@ is set.
 +
 --
 Specifies the invocation strategy to use when running the build scripts command.
-If `per_workspace` is set, the command will be executed for each workspace.
-If `once` is set, the command will be executed once.
+- `per_workspace`: Executes the command for each workspace separately.
+  Allows the use of the `$manifest_path` substitution variable in the override command
+  which will be replaced by the path of the workspace's Cargo.toml.
+- `once`: Executes the command once.
 This config only has an effect when `#rust-analyzer.cargo.buildScripts.overrideCommand#`
 is set.
 --
@@ -182,8 +184,10 @@ is set.
 +
 --
 Specifies the invocation strategy to use when running the check command.
-If `per_workspace` is set, the command will be executed for each workspace.
-If `once` is set, the command will be executed once.
+- `per_workspace`: Executes the command for each workspace separately.
+  Allows the use of the `$manifest_path` substitution variable in the override command
+  which will be replaced by the path of the workspace's Cargo.toml or rust-project.json.
+- `once`: Executes the command once.
 This config only has an effect when `#rust-analyzer.cargo.check.overrideCommand#`
 is set.
 --
