--- a/docs/user/generated_config.adoc
+++ b/docs/user/generated_config.adoc
@@ -448,7 +448,7 @@ The path structure for newly inserted paths to use.
 --
 Whether to show inlay type hints for binding modes.
 --
-[[rust-analyzer.inlayHints.chainingHints.enable]]rust-analyzer.inlayHints.chainingHints.enable (default: `true`)::
+[[rust-analyzer.inlayHints.chainingHints.enable]]rust-analyzer.inlayHints.chainingHints.enable (default: `false`)::
 +
 --
 Whether to show inlay type hints for method chains.
